--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,9 @@ main {
 }
 
 .meme--image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 100%;
   border-radius: 3px;
 }
